Fix Darktable RAW import for versions above 6.2.1

BUG: 449170

This also checks if your API version is actually >= 6.2.1 before calling, similar to how GIMP does it. I wrote my version a little cleaner though ;-)